played with grid system on bootstrap

--- a/index.html
+++ b/index.html
@@ -14,26 +14,109 @@
 <body>
     <section class="container">
         <h1>PlaceHolder</h1>
+        <h1 class="display-1 text-center text-primary">Bootstrap Playground </h1>
         <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem praesentium illo minus, voluptates officia
             quod
             soluta cumque maxime, ratione itaque aliquam voluptate. Harum, cumque! Dicta tenetur consequuntur cum vero
             sint?
         </P>
-        <button id="mybtn">submit</button>
-        <button type="button" class="btn btn-primary">Primary</button>
-        <button type="button" class="btn btn-success">Success</button>
-        <button type="button" class="btn btn-info">info</button>
-        <button type="button" class="btn btn-dark btn-lg">Dark lg</button>
-        <button type="button" class="btn btn-dark btn-sm">Dark sm</button>
-        <button type="button" class="btn btn-outline-danger" active>Danger</button>
-        <button type="button" class="btn btn-success" disabled>Success disabled</button>
+        <h2 class="display-4 btn btn-danger"> update<span class="badge text-bg-success"">10</span></h2>
+        <button id=" mybtn">submit</button>
+                <button type="button" class="btn btn-primary">Primary</button>
+                <button type="button" class="btn btn-success">Success</button>
+                <button type="button" class="btn btn-info">info</button>
+                <button type="button" class="btn btn-dark btn-lg">Dark lg</button>
+                <button type="button" class="btn btn-dark btn-sm">Dark sm</button>
+                <button type="button" class="btn btn-outline-danger" active>Danger</button>
+                <button type="button" class="btn btn-success" disabled>Success disabled</button>
 
     </section>
 
 
 
 
+    <figure class="container text-end bg-body-secondary">
+        <blockquote class="blockquote">
+            <p>A well-known quote, contained in a blockquote element.</p>
+        </blockquote>
+        <figcaption class="blockquote-footer">
+            Someone famous in <cite title="Source Title">Source Title</cite>
+        </figcaption>
+    </figure>
 
+    <button class="btn btn-danger"> Notification <span class="badge text-bg-secondary">9</span></button>
+    <button><span class="badge rounded-pill text-bg-primary btn-lg">Primary</span></button>
+
+    <button type="button" class="btn btn-primary position-relative">
+        Inbox
+        <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+            99+
+            <span class="visually-hidden">unread messages</span>
+        </span>
+    </button>
+
+    <h3>Alert</h3>
+    <div class="alert alert-danger" role="alert">you have permission to access this file</div>
+
+    <hr>
+    <h1 class="display-1 bg-info text-center"> Grid system</h1>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-2 bg-success">i am 6 units</div>
+            <div class="col-10 bg-info">i am 6 units</div>
+        </div>
+    </div>
+    <hr>
+    <h2 class="display-4 ">Responsive Grid</h2>
+    <div class="row">
+        <div class="col-md-6 col-xl-3 bg-danger">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
+            vitae magni
+            nam, vero
+            debitis, hic, sapiente sint maiores nobis placeat aliquid molestias perferendis. Natus nihil sit sunt
+            placeat voluptatum excepturi.
+        </div>
+        <div class="col-md-6 col-xl-3 bg-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus vitae
+            magni
+            nam,
+            vero
+            debitis, hic, sapiente sint maiores nobis placeat aliquid molestias perferendis. Natus nihil sit sunt
+            placeat voluptatum excepturi.
+        </div>
+        <div class="col-md-6 col-xl-3 bg-danger">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
+            vitae
+            magni
+            nam,
+            vero
+            debitis, hic, sapiente sint maiores nobis placeat aliquid molestias perferendis. Natus nihil sit sunt
+            placeat voluptatum excepturi.
+        </div>
+        <div class="col-md-6 col-xl-3 bg-info">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Possimus
+            vitae magni
+            nam, vero
+            debitis, hic, sapiente sint maiores nobis placeat aliquid molestias perferendis. Natus nihil sit sunt
+            placeat voluptatum excepturi.
+        </div>
+    </div>
+    <section class="container">
+        <div class="row gx-4">
+            <div class="col-xl-4 col-md-6">
+                <img class="img-fluid"
+                    src="https://plus.unsplash.com/premium_photo-1691741856241-4c4c9a4c3b9d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1037&q=80"
+                    alt="">
+            </div>
+            <div class="col-xl-4 col-md-6">
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1683009686716-ac2096a5a73b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDF8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+                    alt="">
+            </div>
+            <div class="col-xl-4 col-md-6">
+                <img class="img-fluid"
+                    src="https://images.unsplash.com/photo-1682685797857-97de838c192e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=987&q=80"
+                    alt="">
+            </div>
+        </div>
+    </section>
 
 
 
